--- a/style.css
+++ b/style.css
@@ -4,22 +4,24 @@
     padding: 0;
 }
 
-.nav{
+.nav {
     overflow: hidden;
     background-color: #333;
     height: 5vh;
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: space-around;
 }
-.link-wrapper{
+
+.link-wrapper {
     max-width: 1500px;
     display: flex;
     align-items: center;
     justify-content: space-around;
     gap: 150px;
 }
-.nav a{
+
+.nav a {
     float: left;
     color: green;
     text-align: center;
@@ -28,27 +30,32 @@
     font-size: 140%;
     font-family: Arial, Helvetica, sans-serif;
     transition: 3s;
-    
+
 }
-.nav a:hover{
-    transform:scale(1.2);
+
+.nav a:hover {
+    transform: scale(1.2);
     transition: 0.3s;
-    
+
 }
-.top-content{
+
+.top-content {
     background-image: url(img/render1.png);
-    background-size:cover;
+    background-size: cover;
     height: 95vh;
     filter: blur(2px);
+    text-align: center;
 }
+
 
 
 #projects>h2 {
     text-align: center;
     background-color: #333;
-    color:green ;
+    color: green;
     padding: 15px;
 }
+
 .projects-inner {
     height: 95vh;
     display: grid;
@@ -56,26 +63,34 @@
     row-gap: 3rem;
     background-color: #333;
 }
+
 .proj-container {
     align-items: center;
-   
+
 }
+
 
 .proj-container>.title {
     margin-bottom: 0.7rem;
     color: green;
     font-size: 130%;
-    
+
 }
 .proj-container img{
     border-radius: 20%;
+    transform: scale(.9);
+    transition: 0.3s;
 }
+.proj-container img:hover{
+    transform: scale(1.1);
+    transition: 0.3s;
+}
+
 
 .projects-inner .proj-container {
     margin-top: 5vh;
     display: flex;
     flex-flow: column;
     justify-content: center;
-    
-}
 
+}
