--- a/modaltest/stylemodal.css
+++ b/modaltest/stylemodal.css
@@ -1,46 +1,11 @@
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-.modal-content {
-    background-color: #333;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-}
 
-.close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  .close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-#myBtn{
-    width: 250px;
-    aspect-ratio: 1/1;
-    border-radius: 20%;
-}
-.modal-image{
-    width: 100%;
-    height: 100%;
-    border-radius: 20%;
+.projects{
+    display: flex;
+    flex-direction: row;
 }
