--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 
 .nav a {
     float: left;
-    color: green;
+    color: #739e52;
     text-align: center;
     padding: 1% 1%;
     text-decoration: none;
@@ -47,21 +47,32 @@
     text-align: center;
 }
 
-
-
-#projects>h2 {
-    text-align: center;
+.projects{
+    width: 100%;
     background-color: #333;
-    color: green;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.projects>h2 {
+    text-align: center;
+    color: #739e52;
     padding: 15px;
+}
+.project-wrapper{
+    display: grid;
+    justify-content: space-evenly;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
 }
 
 .projects-inner {
-    height: 95vh;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    row-gap: 3rem;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
     background-color: #333;
+    width: 100%;
+    align-items: center;
 }
 
 .proj-container {
@@ -72,7 +83,7 @@
 
 .proj-container>.title {
     margin-bottom: 0.7rem;
-    color: green;
+    color: #739e52;
     font-size: 130%;
 
 }
@@ -94,3 +105,55 @@
     justify-content: center;
 
 }
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    
+}
+
+.modal-content {
+    background-color: #333;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  .close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.myBtn{
+    width: 250px;
+    aspect-ratio: 1/1;
+    border-radius: 20%;
+}
+.modal-image{
+    width: 100%;
+    height: 100%;
+    border-radius: 20%;
+}
+.footer{
+   padding: 20px;
+   background-color: #2e2e2e;
+   color:#739e52;
+}
+
