--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+    font-size: 20px;
 }
 
 .close {
@@ -155,5 +156,12 @@
    padding: 20px;
    background-color: #2e2e2e;
    color:#739e52;
+   
+}
+.mySocials{
+    width: 80px;
+    aspect-ratio: 1/1;
+    border-radius: 25%;
+    
 }
 
