--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
   .slideshow-container {
     height: 100%;
     display: flex;
-    animation: slideAnimation 15s infinite;
+    animation: slideAnimation 9s infinite;
   }
   
   .mySlides {
@@ -202,10 +202,39 @@
    color:#739e52;
    
 }
+
 .mySocials{
+    display: inline-block;
     width: 80px;
     aspect-ratio: 1/1;
-    border-radius: 25%;
-    
+    border-radius: 16px;
+    position: relative;
 }
 
+.fa {
+    padding: 20px;
+    font-size: 16px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 20%;
+    margin-top: 12px;
+    margin-bottom: 10px;
+    margin-inline: 8px;
+    transition: 0.2s linear;
+  }
+  
+  .fa:hover {
+    transform: scale(1.3);
+    filter: brightness(1.2);
+  }
+
+  .fa-youtube {
+    background-color:#262626;
+    color: #739e52;
+    }   
+
+  .fa-instagram {
+    background-color:#262626;
+    color: #739e52;
+}
