revamped slider should be more visible now
Co-Authored-By: j5x <90614203+j5x@users.noreply.github.com>

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     padding: 0;
 }
 
+body{
+  background-color: #333;
+}
 .nav {
     overflow: hidden;
     background-color: #333;
@@ -41,7 +44,7 @@
 
 .top-content {
     position: relative;
-    background-image: url(img/render1.png);
+    /*background-image: url(img/render1.png);*/
     background-size: cover;
     height: 95vh;
     /*filter: blur(2px);*/
@@ -49,31 +52,54 @@
     overflow: hidden;
   }
   
-  .slideshow-container {
-    height: 100%;
-    display: flex;
-    animation: slideAnimation 9s infinite;
-  }
-  
-  .mySlides {
-    width: 100%;
-    flex-shrink: 0;
-  }
-  
-  @keyframes slideAnimation {
-    0% {
+  .container{
+    width: 85vmin;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    overflow: hidden;
+    border: 10px solid #ffffff;
+    border-radius: 8px;
+    box-shadow: 10px 25px 30px rgba(0,0,0,0.3);
+}
+.wrapper{
+  width: 100%;
+  display: flex;
+  animation: slide 16s infinite;
+}
+
+.slideimg{
+  width: 100%;
+  height: 100%;
+}
+@keyframes slide{
+  0%{
       transform: translateX(0);
-    }
-    33.33% {
-      transform: translateX(-100%);
-    }
-    66.66% {
-      transform: translateX(-200%);
-    }
-    100% {
-      transform: translateX(-300%);
-    }
   }
+  25%{
+      transform: translateX(0);
+  }
+  30%{
+      transform: translateX(-100%);
+  }
+  50%{
+      transform: translateX(-100%);
+  }
+  55%{
+      transform: translateX(-200%);
+  }
+  75%{
+      transform: translateX(-200%);
+  }
+  80%{
+      transform: translateX(-300%);
+  }
+  100%{
+      transform: translateX(-300%);
+  }
+}
+  
   
 .projects{
     width: 100%;
@@ -237,4 +263,10 @@
   .fa-instagram {
     background-color:#262626;
     color: #739e52;
+}
+
+
+
+.aboutus{
+  align-items: center;
 }
