--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
     padding: 0;
 }
 
-body{
-  background-color: #333;
+body {
+    background-color: #333;
 }
+
 .nav {
     overflow: hidden;
     background-color: #333;
@@ -50,58 +51,68 @@ body{
     /*filter: blur(2px);*/
     text-align: center;
     overflow: hidden;
-  }
-  
-  .container{
-    width: 85vmin;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
-    overflow: hidden;
-    border: 10px solid #ffffff;
-    border-radius: 8px;
-    box-shadow: 10px 25px 30px rgba(0,0,0,0.3);
-}
-.wrapper{
-  width: 100%;
-  display: flex;
-  animation: slide 16s infinite;
 }
 
-.slideimg{
-  width: 100%;
-  height: 100%;
+.slider{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    animation: animate 20s ease-in-out infinite;
+    background-size: cover;
 }
-@keyframes slide{
-  0%{
-      transform: translateX(0);
-  }
-  25%{
-      transform: translateX(0);
-  }
-  30%{
-      transform: translateX(-100%);
-  }
-  50%{
-      transform: translateX(-100%);
-  }
-  55%{
-      transform: translateX(-200%);
-  }
-  75%{
-      transform: translateX(-200%);
-  }
-  80%{
-      transform: translateX(-300%);
-  }
-  100%{
-      transform: translateX(-300%);
-  }
+
+.sliderouter{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .5)
 }
-  
-  
-.projects{
+.slidertext{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform:translate(-50%, -50%);
+    text-align: center;
+    color: white;
+}
+
+.slidertext h1{
+    font-size: 5em;
+}
+.slidertext h2{
+    font-size: 1.2em;
+}
+.slidertext h3{
+    font-size: .9em;
+}
+
+
+@keyframes animate {
+
+    0%,
+    100% {
+        background-image: url(img/render1.png);
+    }
+
+    25% {
+        background-image: url(img/render2.png);
+    }
+
+    50% {
+        background-image: url(img/render3.png);
+    }
+
+    75% {
+        background-image: url(img/HighresScreenshot00035.png);
+    }
+}
+
+
+.projects {
     width: 100%;
     background-color: #333;
     padding-top: 50px;
@@ -110,10 +121,11 @@ body{
 
 .projects>h2 {
     text-align: center;
-    color: #739e52;
+    color: #2f4470;
     padding: 15px;
 }
-.project-wrapper{
+
+.project-wrapper {
     display: grid;
     justify-content: space-evenly;
     grid-template-columns: repeat(3, 1fr);
@@ -137,16 +149,18 @@ body{
 
 .proj-container>.title {
     margin-bottom: 0.7rem;
-    color: #739e52;
+    color: #2f4470;
     font-size: 130%;
 
 }
-.proj-container img{
+
+.proj-container img {
     border-radius: 20%;
     transform: scale(.9);
     transition: 0.3s;
 }
-.proj-container img:hover{
+
+.proj-container img:hover {
     transform: scale(1.1);
     transition: 0.3s;
 }
@@ -159,6 +173,7 @@ body{
     justify-content: center;
 
 }
+
 .modal {
     display: none;
     position: fixed;
@@ -171,7 +186,7 @@ body{
     overflow: auto;
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
-    
+
 }
 
 .modal-content {
@@ -183,18 +198,18 @@ body{
     font-size: 20px;
 }
 
-.modal-title{
+.modal-title {
     color: white;
     text-align: center;
 }
 
-.modal-subtitle{
+.modal-subtitle {
     color: white;
     text-align: center;
     margin-top: 5px;
 }
 
-.modal-text{
+.modal-text {
     font-size: 16px;
     color: white;
 }
@@ -204,32 +219,35 @@ body{
     float: right;
     font-size: 28px;
     font-weight: bold;
-  }
-  .close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
 }
 
-.myBtn{
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.myBtn {
     width: 250px;
     aspect-ratio: 1/1;
     border-radius: 20%;
 }
-.modal-image{
+
+.modal-image {
     width: 100%;
     height: 100%;
     border-radius: 20%;
 }
-.footer{
-   padding: 20px;
-   background-color: #2e2e2e;
-   color:#739e52;
-   
+
+.footer {
+    padding: 20px;
+    background-color: #2e2e2e;
+    color: #739e52;
+
 }
 
-.mySocials{
+.mySocials {
     display: inline-block;
     width: 80px;
     aspect-ratio: 1/1;
@@ -248,25 +266,33 @@ body{
     margin-bottom: 10px;
     margin-inline: 8px;
     transition: 0.2s linear;
-  }
-  
-  .fa:hover {
+}
+
+.fa:hover {
     transform: scale(1.3);
     filter: brightness(1.2);
-  }
+}
 
-  .fa-youtube {
-    background-color:#262626;
+.fa-youtube {
+    background-color: #262626;
     color: #739e52;
-    }   
+}
 
-  .fa-instagram {
-    background-color:#262626;
+.fa-instagram {
+    background-color: #262626;
     color: #739e52;
 }
 
 
 
-.aboutus{
-  align-items: center;
+.abt {
+    text-align: center;
+    color: #2f4470;
+    height: 100vh;
 }
+
+.abth1 {}
+
+.abth2 {}
+
+.abt>p {}
