--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ body {
 
 
 .abtus{
-    height: 200vh;
+    height: 150vh;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -322,7 +322,8 @@ body {
   }
 
   .footer {
-    padding: 20px;
+    padding-top: 20px;
+    margin-top: 50px;
     background-color: #2f4470;
     color: white;
     width: 100%;
