--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@
 }
 
 body {
-    background-color: #333;
+    background-color: #273d66;
 }
 
 .nav {
     overflow: hidden;
-    background-color: #273d66;
+    background-color: #384255;
     height: 5vh;
     display: flex;
     align-items: center;
@@ -273,7 +273,7 @@ body {
     margin: 1rem;
     align-items: center;
     max-width: 70%;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 .abtmain .content{
@@ -292,12 +292,25 @@ body {
     flex-basis: 30%;
 }
 
+#OT{
+    padding-right: 0px;
+}
+
+#OM{
+    padding-right:935px;
+}
+
+#JOJ{
+    padding: 0px;
+}
+
+
 #teamSlider{
-    display: flex;
-    overflow-x: scroll;
+    display:flex;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     padding-bottom: 20px; /* Adjust as needed */
+    padding-top: 40px;
 
     .slide {
         flex-shrink: 0;
@@ -307,11 +320,11 @@ body {
     }
 
     .team-member-image {
-        width: 150px;
-        height: 150px;
+        width: 80px;
+        height: 80px;
         object-fit: cover;
-        border-radius: 50%;
-        margin: 0 auto 10px;
+        border-radius: 10%;
+        margin-top: 10px;
     }
 }
 
@@ -323,13 +336,21 @@ body {
     margin: auto;
   }
   
+  .abtslide-viewport {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    overflow: hidden;
+  }
+  
   .abtslide-wrapper {
-    width: 2912px;
+    width: 100%;
+    display: flex;
     -webkit-animation: abtslide 18s ease infinite;
   }
   
   .abtslide {
-    float: left;
+    flex: 0 0 33.33%; /* Adjust the value as needed to show 3 icons */
     height: 510px;
     width: 728px;
   }
@@ -353,24 +374,23 @@ body {
   .abtslide-number {
     color: #000;
     text-align: center;
-
     font-size: 10em;
   }
   
   @-webkit-keyframes abtslide {
-    20% {margin-left: 0px;}
-    30% {margin-left: -728px;}
-    50% {margin-left: -728px;}
-    60% {margin-left: -1456px;}
-    70% {margin-left: -1456px;}
-    80% {margin-left: -2184px;}
-    90% {margin-left: -2184px;}
+    20% { transform: translateX(0%); }
+    30% { transform: translateX(-33.33%); }
+    50% { transform: translateX(-33.33%); }
+    60% { transform: translateX(-66.66%); }
+    70% { transform: translateX(-66.66%); }
+    80% { transform: translateX(-100%); }
+    90% { transform: translateX(-100%); }
 }
-
+  
 .footer {
     padding: 20px;
     margin-top: 0px;
-    background-color: #273d66;
+    background-color: #384255;
     color: white;
     width: 100%;
 }
