--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 
 .link-wrapper {
